# hermes-agent

./: .gitignore  INSTALL.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
ingest/: base.py  test_provider.py
ingest/providers/: slack.py
processor/: cleaner.py  config.py  entity_processor.py  evaluator.py  keyword_processor.py  log.py  markdown_processor.py  processing_state.py  related_processor.py  retrieval.py  runner.py  summary_processor.py  validator.py  vault_indexer.py  wiki_processor.py
processor/llm/: cache.py  client.py
processor/prompts/: entity_prompt.txt  project_alias.json  summary_prompt.txt
tests/: conftest.py  test_entity_processor.py  test_keyword_processor.py  test_llm_cache.py  test_markdown_processor.py  test_processing_state.py  test_related_processor.py  test_runner.py  test_summary_processor.py
