[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-agent"
version = "1.0.0"
description = "LLM-powered knowledge pipeline for Slack markdown exports"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "python-dotenv>=1.0",
    "openai>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
hermes = "processor.runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["processor*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]
